[package]
name = "muzanci-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
futures = "0.3.32"
futures-util = { version = "0.3.32", features = ["sink"] }
heapless = "0.9.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_derive = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "sync", "macros"] }
tokio-io = "0.1.13"
tokio-util = { version = "0.7.18", features = ["codec"] }
uuid = { version = "1.23.3", features = ["serde", "v7"] }

[lib]
name = "muzanci_transport"
path = "src/lib.rs"
